--- a/dependency-mapper/index.html
+++ b/dependency-mapper/index.html
@@ -6,6 +6,7 @@
       A --- B
       B-->C[fa:fa-ban forbidden]
       B-->D(fa:fa-spinner);
+      C -- Three --> F["fa:fa-car Car"]
     </pre>
     <script type="module">
       import mermaid from "https://cdn.jsdelivr.net/npm/mermaid@11/dist/mermaid.esm.min.mjs";
